fixed theme colour for dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21756,15 +21756,15 @@ html[dir=rtl] .choices__input {
   --bs-body-bg: #222529;
   --bs-body-bg-rgb: #222529;
   --bs-body-color: #a1a1a8;
-  --bs-primary: #8e85e6 !important;
-  --bs-primary-rgb: 142, 133, 230;
+  --bs-primary: #fd7e14 !important;
+  --bs-primary-rgb: 253, 126, 20;
   --bs-mode:#191b1d;
   --bs-border-color: rgba(255, 255, 255, 0.07);
-  --bs-link-color:#8e85e6;
-  --bs-link-color-rgb: 142, 133, 230 !important;
-  --bs-link-hover-color-rgb: 122, 109, 235;
-  --bs-link-hover-color:#7a6deb;
-  --bs-nav-pills-link-active-bg: #8e85e6 !important;
+  --bs-link-color:#fd7e14;
+  --bs-link-color-rgb: 253, 126, 20 !important;
+  --bs-link-hover-color-rgb: 244, 115, 43;
+  --bs-link-hover-color:#f4732b;
+  --bs-nav-pills-link-active-bg: #fd7e14 !important;
 }
 [data-bs-theme=dark] .navbar {
   --bs-navbar-color: var(--bs-gray-600);
